--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,13 @@
-<h1>Sample App</h1>
-<p>
-  This is the home page for the
-  <a href="http://google.com/">RoR tutorial</a>
-  sample application.
-</p>
+<div class="center hero-unit">
+  <h1>Welcome to the Sample App</h1>
+  
+  <h2>
+    This is the home page for the
+    <%= link_to "RoR Tutorial",   'http://google.com/' %>
+    sample application.
+  </h2>
+  
+  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://google.com/' %>
